--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -12,8 +13,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-
-    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="22"/>
 
     <uses-feature android:name="android.hardware.camera.any"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
@@ -40,90 +39,7 @@
                 <action android:name="dev.tavieto.scannertest.SCAN"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
-            <!-- Allow web apps to launch Barcode Scanner by linking to http://zxing.appspot.com/scan. -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="http" android:host="zxing.appspot.com" android:path="/scan"/>
-            </intent-filter>
-            <!-- We also support a Google Product Search URL. -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="http" android:host="www.google.com" android:path="/m/products/scan"/>
-            </intent-filter>
-            <!-- And the UK version. -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="http" android:host="www.google.co.uk" android:path="/m/products/scan"/>
-            </intent-filter>
-            <!-- Support zxing://scan/?... like iPhone app -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="zxing" android:host="scan" android:path="/"/>
-            </intent-filter>
         </activity>
-        <activity android:name="dev.tavieto.scanner.zxing.PreferencesActivity"
-            android:label="@string/preferences_name"
-            android:stateNotNeeded="true"/>
-        <activity android:name="dev.tavieto.scanner.zxing.encode.EncodeActivity"
-            android:stateNotNeeded="true"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="dev.tavieto.scannertest.ENCODE"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-            <!-- This allows us to handle the Share button in Contacts. -->
-            <intent-filter>
-                <action android:name="android.intent.action.SEND"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="text/x-vcard"/>
-            </intent-filter>
-            <!-- This allows us to handle sharing any plain text . -->
-            <intent-filter>
-                <action android:name="android.intent.action.SEND"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="text/plain"/>
-            </intent-filter>
-        </activity>
-        <activity android:name="dev.tavieto.scanner.zxing.book.SearchBookContentsActivity"
-            android:label="@string/sbc_name"
-            android:stateNotNeeded="true"
-            android:screenOrientation="sensorLandscape"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="dev.tavieto.scannertest.SEARCH_BOOK_CONTENTS"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-        </activity>
-        <activity android:name="dev.tavieto.scanner.zxing.share.ShareActivity"
-            android:stateNotNeeded="true"
-            android:screenOrientation="user"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="dev.tavieto.scannertest.SHARE"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-        </activity>
-        <activity android:name="dev.tavieto.scanner.zxing.history.HistoryActivity"
-            android:label="@string/history_title"
-            android:stateNotNeeded="true"/>
-        <activity android:name="dev.tavieto.scanner.zxing.share.BookmarkPickerActivity"
-            android:label="@string/bookmark_picker_name"
-            android:stateNotNeeded="true"/>
-        <activity android:name="dev.tavieto.scanner.zxing.share.AppPickerActivity"
-            android:label="@string/app_picker_name"
-            android:stateNotNeeded="true"/>
-        <activity android:name="dev.tavieto.scanner.zxing.HelpActivity"
-            android:label="@string/menu_help"
-            android:screenOrientation="user"
-            android:stateNotNeeded="true"/>
     </application>
 
 </manifest>
